<resources>
    <string name="app_name">Alejandra Hair Salon</string>
    <string name="appointments">Appointments</string>
    <string name="alert_appointment_created_title">APPOINTMENT CREATED</string>
    <string name="alert_appointment_created_message">The system will send you a reminder on the day of your appointment, thank you for choosing us.</string>
    <string name="alert_emptyfields">Empty fields!</string>
    <string name="alert_errorlogin">Invalid username or password</string>
    <string name="alert_registration_completed_tittle">SUCCESSFUL REGISTRATION!</string>
    <string name="alert_registration_completed_message">Remember to save your password, you will now be redirected to the app home page</string>
    <string name="actions">Actions</string>
    <string name="back">Back</string>
    <string name="birthday">Birthday</string>
    <string name="cancel">Cancel</string>
    <string name="clean">Clean</string>
    <string name="create">Create</string>
    <string name="create_appointment">Create appointment</string>
    <string name="create_new_account">Create new account</string>
    <string name="date">Date</string>
    <string name="datetime">Date &amp; time</string>
    <string name="description_img">Black and white image of a woman\'s face with her left hand touching her face</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="employee">Employee</string>
    <string name="firstname">First name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="history">History</string>
    <string name="lastname">Last name</string>
    <string name="login">Log In</string>
    <string name="manage_profile">Manage profile</string>
    <string name="mobilenumber">Mobile number</string>
    <string name="password">Password</string>
    <string name="service">Service</string>
    <string name="signup">Sing Up</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="username">Username</string>
    <string name="value">Value</string>
    <string name="value_to_be_paid">Value to be paid</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_greeting1">Welcome to the Appointment Scheduling System.</string>
    <string name="welcome_greeting2">Here you can book your appointment to be attended to at our establishment.</string>
</resources>