<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:contentDescription="play"
            app:thumbTint="@color/green1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:contentDescription="play"
            app:chipIcon="@drawable/oido16" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/blue1"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_first_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="first name"
        android:hint="@string/firstname"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_last_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="last name"
        android:hint="@string/lastname"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_birthday"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="birthday"
        android:hint="@string/birthday"
        android:inputType="date"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_mobile_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Mobile number"
        android:hint="@string/mobilenumber"
        android:inputType="phone"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="Email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green1"
        android:onClick="onSigUp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />
</LinearLayout>