<?xml version="1.0" encoding="utf-8"?><!-- <androidx.constraintlayout.widget.ConstraintLayout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- ESTO ES UN COMENTARIO -->
    <!-- para que pudiera compilar tuve que ir al archivo build.gradle.kts
    y modificar "compileSdk = 33" por "compileSdk = 34"-->

    <!--
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:background="@color/blue1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:contentDescription="play"
            app:thumbTint="@color/green1" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:layout_width="36dp"
            android:layout_height="48dp"
            android:contentDescription="play"
            app:chipIcon="@drawable/oido16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/blue1"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="74dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/blue1"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="140dp"
            android:contentDescription="@string/description_img"
            android:src="@drawable/peluqueria_jpg" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_reg_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue1"
            android:onClick="onLogin"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green1"
            android:onClick="onCreate"
            android:text="@string/create_new_account"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>


</LinearLayout>